Fix: Allow link actions to wrap to the next line when the browser window is too narrow.
They were always intended to wrap, but due to an oversight/lack of testing the styles that make the link URL non-wrapping also applied to row actions.

Note: It may seem that it would be simpler to just apply the no-wrap rule to .blc-link-url. However, that doesn't work in IE 11 (and possibly others). Apparently, wrapping styles must be set on the containing block.


git-svn-id: https://plugins.svn.wordpress.org/broken-link-checker/trunk@1033853 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/links-page.css
+++ b/css/links-page.css
@@ -231,6 +231,11 @@ td.column-new-url {	/* The URL never wraps */
 	-o-text-overflow: ellipsis;
 }
 
+td.column-new-url .row-actions { /* However, the action links below the URL can wrap. */
+	word-wrap: normal;
+	white-space: normal;
+}
+
 .blc-link-editor {
     font-size: 1em;
     width: 95%;
